# commonlibrary_memory_utils

./: OAT.xml  README.en.md  README.md  README_ZH.md  README_zh.md  bundle.json  ohos.build  purgeable_mem_config.gni
libdmabufheap/: BUILD.gn
libdmabufheap/include/: dmabuf_alloc.h
libdmabufheap/src/: dmabuf_alloc.c
libdmabufheap/test/: BUILD.gn
libdmabufheap/test/unittest/libdmabufheap/: dmabuf_alloc_test.cpp
libmeminfo/: BUILD.gn
libmeminfo/include/: meminfo.h
libmeminfo/src/: meminfo.cpp
libmeminfo/test/: BUILD.gn
libmeminfo/test/unittest/: meminfo_test.cpp
libpurgeablemem/: BUILD.gn
libpurgeablemem/c/include/: pm_log_c.h  purgeable_mem_builder_c.h  purgeable_mem_c.h
libpurgeablemem/c/src/: purgeable_mem_builder_c.c  purgeable_mem_c.c  purgeable_memory.c
libpurgeablemem/common/include/: pm_ptr_util.h  pm_state_c.h  pm_util.h  ux_page_table_c.h
libpurgeablemem/common/src/: ux_page_table_c.c
libpurgeablemem/cpp/include/: pm_log.h  pm_smartptr_util.h  purgeable_ashmem.h  purgeable_mem.h  purgeable_mem_base.h  purgeable_mem_builder.h  purgeable_resource_manager.h  ux_page_table.h
libpurgeablemem/cpp/src/: purgeable_ashmem.cpp  purgeable_mem.cpp  purgeable_mem_base.cpp  purgeable_mem_builder.cpp  purgeable_resource_manager.cpp  ux_page_table.cpp
libpurgeablemem/include/: pm_builder.h  pm_ptr_util.h  pm_state.h  purgeable_mem.h  ux_page_table.h
libpurgeablemem/interfaces/kits/c/: BUILD.gn  purgeable_memory.h
libpurgeablemem/src/: pm_builder.c  purgeable_mem.c  ux_page_table.c
libpurgeablemem/test/: BUILD.gn  purgeable_c_test.cpp  purgeable_cpp_test.cpp  purgeable_memory_test.cpp  purgeableashmem_test.cpp  purgeableresourcemanager_test.cpp
libsync/: BUILD.gn
libsync/include/: sync.h
libsync/src/: sync.c
purgeable_builder/: BUILD.gn
purgeable_builder/include/: purgeable_pixelmap_builder.h
purgeable_builder/src/: purgeable_pixelmap_builder.cpp
